one more try to fix button '+' icon alignment for iPhone and add link opening in a new tab :)

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ button {
 	font-size: 48px;
 	color: #000;
 	background-color: var(--green);
-	line-height: 1.1;
+	line-height: .8;
 	border: none;
 	outline: none;
 	/* box-shadow: var(--shadow); */
